<resources>
    <string name="app_name">AutoRepairSystem-Android</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- Strings related to customer home -->
    <string name="servicesHeader">Services</string>
    <string name="dateHeader">Date</string>
    <string name="endTimeHeader">End Time</string>
    <string name="startTimeHeader">Start Time</string>
    <string name="bookedAppointmentsString">Booked Appointments</string>
    <!-- Strings related to availabilities -->
    <string name="availabilityText">Availabilities:</string>
    <!-- Strings related to appointment booking -->
    <string name="select_services">Select Services:</string>
    <string name="view_availabilities">View Availabilities</string>
    <string name="select_date">Select Date:</string>
    <string name="select_time">Select Time:</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="book_appointment_title">Book An Appointment</string>
    <string name="select_services_button">No Selected Services</string>
    <string name="select_date_button">1/1/2021</string>
    <string name="select_time_button">00:00</string>
    <string name="customerHomeText1">Welcome to Los Santos Customs</string>
    <string name="view_appointments">View Appointments</string>
    <string name="log_out">Log Out</string>
</resources>